tests/unit/default/syntax-error/126-add-fk-table-dot-name.e.t
---- IN ----
+FK%child.parent-id
---- OUT ----
---- ERR ----
syntax: expected `=>` after `+FK%child.parent-id` instead of EOL at position 19 - at line 1
---- EXIT ----
1
